<resources>
    <string name="app_name">魔都建筑</string>
    <!--登陆-->
    <string name="login__standard_phone">标准手机号码</string>
    <string name="login__standard_email">标准Email</string>
    <string name="login__format_err">您的输入格式不正确</string>
    <string name="login__login">登录</string>
    <string name="login__phone_email">手机号</string>
    <string name="login__password">密码</string>
    <string name="login__forget_pwd">忘记密码?</string>
    <string name="login__forget">忘记密码</string>
    <string name="login__access">登陆成功！</string>
    <string name="login__fail">登陆失败，请重新登陆！</string>
    <string name="login__no_account">账号不存在！</string>
    <string name="login__alredy_has_account">账号已经存在！</string>
    <string name="login__send_verifycode_access">发送验证码成功！</string>
    <string name="login__send_verifycode_err">发送验证码失败！</string>
    <string name="login__account_err">您输入的账号或者密码有误，请重新输入!</string>
    <string name="login___edit_photo">请输入账号</string>

    <!--注册-->
    <string name="register__num_edit">请输入您的手机号</string>
    <string name="register__Verify">输入验证码</string>
    <string name="register__get_verify">获取验证码</string>
    <string name="register__time_verify">秒后重新获取</string>
    <string name="register__psw">请输入密码</string>
    <string name="register__pwd">请再次输入密码</string>
    <string name="regist__not_psw">密码不能为空！</string>
    <string name="register__pwd_succeed">密码长度为6–20位，请输入正确的密码！</string>
    <string name="register__disagree_psw">密码不一致！</string>
    <string name="regist__agree_deal">同意</string>
    <string name="regist__deal">我已同意天下酒仓</string>
    <string name="regist__deal_link"><u>注册协议</u></string>
    <string name="register__registers">注册</string>
    <string name="register__set_pwd">请设置密码</string>
    <string name="register__Verify_edit">请输入验证码</string>
    <string name="register__set_pwd_edit">请输入密码，密码长度为6–20位</string>
    <string name="register__Verify_succeed">请输入正确的验证码！</string>
    <string name="register__Verify_empty">验证码不能为空</string>
    <string name="register__company_name">请输入推广码</string>
    <string name="register__company_name_desc">(可不填写)</string>
    <string name="register__disagree_deal">您还没有同意天下酒仓用户注册协议</string>
    <string name="regist__not_empty">手机号不能为空！</string>
    <string name="regist__phone_length">手机号长度为11位!</string>
    <string name="regist__phone_format_err">请输入正确的手机号码!</string>
    <string name="regist__phone_format_ecc">请输入正确的验证码！</string>
    <string name="regist__fail">注册失败</string>
    <string name="regist__succed">注册成功!</string>
    <string name="forget_pwd_btn">完成并登录</string>
    <string name="login__pwd_error">用户名不正确</string>
    <string name="password_reset">下一步</string>


    <string name="name">姓名</string>
    <string name="binding_cellphone">绑定手机</string>
    <string name="binding_cellphone_num">139****1234</string>
    <string name="change_cellphone">更换绑定手机</string>
    <string name="merchant_name">商户名称</string>
    <string name="amend_password">修改密码</string>
    <string name="password">******</string>
    <string name="out_login">您将退出此次登录,您确定吗？</string>
    <string name="wrong">点错了</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="new_security_code">新设密码</string>
    <string name="affirm_code">确认密码</string>
    <string name="existing_password">现有密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="new_password1">请再次输入新密码</string>
    <string name="used_password">请输入现有密码</string>
    <string name="submit_new_password">提交新密码</string>
    <string name="alter_icon">凭证上传</string>
    <string name="photograph">拍照</string>
    <string name="photo_album">从相册中选择</string>

    <string name="account__user_center">用户中心</string>
    <string name="alter_name">修改姓名</string>
    <string name="import_name">请您输入姓名</string>
    <string name="alter_merchant_name">商户名称修改</string>
    <string name="import_merchant_name">请输入商户名</string>

    <string name="no_delivery_address">还没有收货地址哦~</string>
    <string name="add_delivery_address">添加地址</string>
    <string name="modify__succed">修改成功！</string>
    <string name="modify__fail">修改失败！</string>
    <string name="consignee">收件人</string>
    <string name="consignee_name">请输入收件人姓名</string>
    <string name="mobile">手机号</string>
    <string name="location">所在地</string>
    <string name="select_location">选择所在地</string>
    <string name="detailed_address">输入详细收货地址</string>
    <string name="address">详细地址</string>
    <string name="hold">保存</string>
    <string name="default_address">默认地址</string>
    <string name="delete">删除</string>
    <string name="shop_name">商铺名</string>
    <string name="import_shop_name">请输入店铺名</string>
    <string name="addressee_site">收货地址</string>

    <string name="order_money">订单金额\t:</string>
    <string name="money_symbol">￥</string>
    <string name="alipy">支付宝</string>
    <string name="nionpay">银联支付</string>
    <string name="cash_on_delivery">货到付款</string>
    <string name="total_amount">总额\t:</string>
    <string name="confirm_pay">确定支付</string>

    <string name="jin_yuan">元/斤</string>
    <string name="annotation">注\t:\t本产品支持货到付款</string>
    <string name="yuan">元</string>

    <string name="empty">清空菜篮子</string>
    <string name="delivery_date">送达的时间\t:</string>
    <string name="ready">菜篮子已经准备就绪咯~</string>

    <string name="wnp">网农批</string>
    <string name="next_step">下一步</string>
    <string name="go_approval">去审批</string>


    <string name="amend_address">修改地址</string>
    <string name="beijing">北京</string>
    <string name="yuan_jin">元/斤</string>
    <string name="product_standard">株高：</string>
    <string name="member_top_title">成员管理</string>
    <string name="name_zero">姓名不能为空</string>
    <string name="my_order_top_title">我的订单</string>
    <string name="order_approval_top_title">订单审批</string>
    <string name="order_confirm_top_title">订单确认</string>
    <string name="order_details_top_title">订单详情</string>
    <string name="order_pay_top_title">结算信息</string>
    <string name="order__num">订  单  号：</string>
    <string name="order__time">下单时间：</string>
    <string name="order__men">下  单  人：</string>
    <string name="order__condition">订单状态：</string>
    <string name="approval__condition">审批状态：</string>
    <string name="give_time">送达时间：</string>
    <string name="logistics_condition">物流状态：</string>
    <string name="product_name">产品名称</string>
    <string name="product_price">单价</string>
    <string name="product_num">数量</string>
    <string name="order_number">订单号：</string>
    <string name="order_men">下\t单\t人\t：</string>
    <string name="order__money">下 单 金 额\t：</string>
    <string name="pay_time">下 单 时 间 ：</string>
    <string name="give__time">送 达 时 间\t：</string>
    <string name="not_approvals">不予审批</string>
    <string name="go_pay">去付款</string>
    <string name="add_adresss">添加收货地址</string>
    <string name="total">合计</string>
    <string name="pay">实付款：</string>
    <string name="add_product">添加商品</string>
    <string name="surplus_time">剩余支付时间：</string>
    <string name="minute">分钟</string>
    <string name="go__pay">去支付</string>
    <string name="same_again">再来一份</string>
    <string name="search__product">搜索农产\t\t如：红薯</string>
    <string name="leave">离开</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="hour">小时</string>
    <string name="sky">天</string>
    <string name="month">个月</string>
    <string name="year">年</string>

    <string name="login">登录/注册</string>
    <string name="message_center">消息中心</string>
    <string name="common_issue">常见问题</string>
    <string name="new_hand_helper">新手帮助</string>
    <string name="user_feedback">用户反馈</string>
    <string name="more">更多</string>

    <string name="back">返回</string>
    <string name="personal_center">个人中心</string>
    <string name="icon">头像</string>
    <string name="real_name">代理商昵称</string>
    <string name="user_name">用户名</string>
    <string name="change_password">登录密码</string>
    <string name="payment_password">支付密码</string>
    <string name="mobile_verification">手机验证</string>
    <string name="amend_gesture_password">修改手势密码</string>
    <string name="instant_authentication">张三</string>
    <string name="log_out">退出登录</string>
    <string name="auth_password">再次输入新密码</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
