<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <include layout="@layout/common__head" />

    <RelativeLayout
        android:id="@+id/mytrip__user_usermod"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/color_dcdcdc" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:text="@string/existing_password"
            android:textColor="@color/color_323232"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/existing_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="44dp"
            android:layout_toRightOf="@+id/username"
            android:background="@null"
            android:hint="@string/used_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/color_323232"
            android:textColorHint="@color/color_999999"
            android:textSize="10sp"
            tools:ignore="RtlHardcoded,SmallSp" />

        <ImageView
            android:id="@+id/reset"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_marginTop="17dp"
            android:visibility="gone"
            android:background="@drawable/account__delete_icon"
            tools:ignore="ContentDescription,RtlHardcoded" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/color_dcdcdc" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/mytrip__new_usermod"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/new_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:text="@string/new_security_code"
            android:textColor="@color/color_323232"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="44dp"
            android:layout_toRightOf="@+id/new_username"
            android:background="@null"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColorHint="@color/color_999999"
            android:textColor="@color/refresh__color"
            android:textSize="10sp"
            tools:ignore="RtlHardcoded,SmallSp" />

        <ImageView
            android:id="@+id/reset1"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_marginTop="17dp"
            android:visibility="gone"
            android:background="@drawable/account__delete_icon"
            tools:ignore="ContentDescription,RtlHardcoded" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/color_dcdcdc" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mytrip__ensure_usermod"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/ensure_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:text="@string/affirm_code"
            android:textColor="@color/color_323232"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/again_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="44dp"
            android:layout_toRightOf="@+id/ensure_username"
            android:background="@null"
            android:hint="@string/new_password1"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColorHint="@color/color_999999"
            android:textColor="@color/refresh__color"
            android:textSize="10sp"
            tools:ignore="RtlHardcoded,SmallSp" />

        <ImageView
            android:id="@+id/reset2"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_marginTop="17dp"
            android:visibility="gone"
            android:background="@drawable/account__delete_icon"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_dcdcdc" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/submit__change_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login__login_selector"
            android:onClick="onClick"
            android:text="@string/submit_new_password"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>